# NSU_OOP_CXX

./: CMakeLists.txt  README.md  bigint.cpp  test.cpp
include/: gameOfLife.h
lab1/: CMakeLists.txt
lab1/include/: bigint.h  bigintHeader.h
lab1/src/: bigint.cpp
lab1/test/: test.cpp
lab2/: CMakeLists.txt
lab2/config/: file.txt
lab2/libs/CommandState/: CMakeLists.txt
lab2/libs/CommandState/include/: commandState.h  commandstate.h
lab2/libs/CommandState/src/: commandState.cpp  commandstate.cpp
lab2/libs/CommandState/test/: command_state_tests.cpp
lab2/libs/Field/: CMakeLists.txt
lab2/libs/Field/include/: field.h
lab2/libs/Field/src/: field.cpp
lab2/libs/Field/test/: field_tests.cpp
lab2/libs/Game/: CMakeLists.txt
lab2/libs/Game/include/: gameOfLife.h
lab2/libs/Game/src/: gameOfLife.cpp
lab2/libs/Game/test/: game_of_life_tests.cpp
lab2/libs/GameState/: CMakeLists.txt
lab2/libs/GameState/include/: gameState.h  gamestate.h
lab2/libs/GameState/src/: gameState.cpp  gamestate.cpp
lab2/libs/GameState/test/: game_state_tests.cpp
lab2/libs/Message/: CMakeLists.txt
lab2/libs/Message/include/: message.h
lab2/libs/Message/src/: message.cpp
lab2/libs/Message/test/: message_tests.cpp
lab2/src/: main.cpp
src/: file.txt  gameOfLife.cpp  main.cpp
test/: test.cpp
